<resources>
    <string name="app_name">Disther</string>
    <string name="carrega_dados_software">Carregando os dados do software. Aguarde!!!</string>
    <string name="carrega_info_bd">Carregando informações do banco de dados</string>
    <string name="todo">TODO</string>
    <string name="txt_instrucoes">Instruções</string>
    <string name="Bombas">Bombas</string>
    <string name="Injetores">Injetores</string>
    <string name="Valvulas">Válvulas</string>
    <string name="Sensores">Sensores</string>
    <string name="bosch">BOSCH</string>
    <string name="denso">DENSO</string>
    <string name="delphi">DELPHI</string>
    <string name="siemens">SIEMENS</string>
    <string name="cartepillar">CARTEPILLAR</string>
    <string name="txt_cod_rel">Código</string>
    <string name="txt_plano_rel">Plano</string>
    <string name="txt_marca_rel">Marca</string>
    <string name="txt_data_rel">Data</string>
    <string name="txt_hora_rel">Hora</string>
    <string name="txt_resultado_rel">Resultado</string>
    <string name="txt_ponto_rel_01">1. ZME</string>
    <string name="txt_ponto_rel_02">2. Check</string>
    <string name="txt_ponto_rel_03">3. Temperature Conditioning</string>
    <string name="txt_ponto_rel_04">4. Oil Tightness</string>
    <string name="txt_ponto_rel_05">5. KL</string>
    <string name="txt_ponto_rel_06">6. Suction Check</string>
    <string name="txt_ponto_rel_07">7. Warm Up</string>
    <string name="executar_testes_bomba">EXECUTAR TESTES BOMBA</string>
    <string name="executar_testes_injetor">EXECUTAR TESTES INJETOR</string>
    <string name="executar_testes">EXECUTAR TESTES</string>
    <string name="gerar_relatorio">Gerar Relatório</string>
    <string name="relatorios">Relatórios</string>
    <string name="txt_injector_test">Teste de Injetores</string>
    <string name="txt_electrical_injector_test">Teste Elétrico do Injetor</string>
    <string name="txt_rotation">Rotação</string>
    <string name="txt_exe_electrical_test_injector">Teste Elétrico</string>
    <string name="por_favor_aguarde">Por favor, aguarde …</string>
    <string name="txt_injector_test_condição">Condição</string>
    <string name="txt_injector_test_condição_b">Condição B</string>
    <string name="txt_injector_test_resistencia">Resistência</string>
    <string name="txt_injector_test_resistencia_b">Resistência B</string>
    <string name="txt_injector_test_status">Status</string>
    <string name="txt_injector_tightness_test_status">Status</string>
    <string name="txt_warning_rotation">* Para continuar com os testes, é preciso uma rotação de 500 rpm.</string>
    <string name="rpm">rpm</string>
    <string name="txt_ok">OK</string>
    <string name="rotacao_desejada">Rotação desejada:</string>
    <string name="_500">500</string>
    <string name="rotacao">Rotação</string>
    <string name="text_info_rotation">Mantenha a rotação em \n %d rpm</string>
    <string name="_1000">1000</string>
    <string name="temperatura">Temperatura</string>
    <string name="celsius">°C</string>
    <string name="txt_info_rotacao_pump_01">1. Ligue a alimentação de óleo na <b>entrada</b> da <b>bomba</b>.</string>
    <string name="txt_info_rotacao_pump_02">2. Coloque a pressão de entrada da bomba em &lt;b>%s bar&lt;/b>.</string>
    <string name="txt_info_rotacao_inj_01">1. Ligue a alimentação de óleo na <b>entrada</b> do <b>injetor</b>.</string>
    <string name="txt_info_rotacao_inj_02">2. Coloque a pressão de entrada do injetor entre &lt;b>%s bar&lt;/b> e &lt;b>%s bar&lt;/b>.</string>
    <string name="txt_info_rotacao_03">3. Ligue o motor no sentido de rotação &lt;b>%s&lt;/b> em &lt;b>%d&lt;/b> rotações por minuto (rpm).</string>
    <string name="txt_info_rotacao_04">4. Certifique-se de que a temperatura do tanque esteja entre &lt;b>%d°C&lt;/b> e &lt;b>%d°C&lt;/b>.</string>
    <string name="txt_info_rotacao_05">5. Certifique-se de que <b>não</b> há <b>vazamentos</b>.</string>
    <string name="txt_pump_test">Teste de Bombas</string>
    <string name="txt_electrical_pump_test">Teste Elétrico da Bomba</string>
    <string name="txt_exe_electrical_test_pump">Teste Elétrico</string>
    <string name="txt_pump_test_condição">Condição</string>
    <string name="txt_pump_test_condição_b">Condição B</string>
    <string name="txt_pump_test_resistencia">Resistência</string>
    <string name="txt_pump_test_resistencia_b">Resistência B</string>
    <string name="txt_pump_test_status">Status</string>
    <string name="txt_pump_test_current_ext_1">Corrente EXT 1</string>
    <string name="txt_pump_test_current_ext_2">Corrente EXT 2</string>
    <string name="txt_pump_test_freq_ext_1">Freq. EXT 1</string>
    <string name="txt_pump_test_freq_ext_2">Freq. EXT 2</string>
    <string name="txt_pump_test_pressure_feed">Pressão alimentação</string>
    <string name="txt_pump_test_rotation">Rotação</string>
    <string name="txt_pump_test_temperature">Temperatura</string>
    <string name="txt_instrucoes_conectores_bomba">Instruções</string>
    <string name="txt_info_conexao_pump_01"> - Conecte os cabos &lt;b>%1$s&lt;/b>/&lt;b>%2$s&lt;/b> nas válvulas do rail de alta pressão;</string>
    <string name="txt_info_conexao_pump_02"> - Utilize o conector &lt;b>%1$s&lt;/b> com o Adaptador &lt;b>%2$s&lt;/b> para o atuador &lt;b>%3$s&lt;/b> da bomba;</string>
    <string name="txt_info_conexao_pump_03"> - Utilize o conector &lt;b>%1$s&lt;/b> com o Adaptador &lt;b>%2$s&lt;/b> para o atuador &lt;b>%3$s&lt;/b> da bomba.</string>
    <string name="configuration">Configurações</string>
    <string name="remote_configuration">Configuração Remota</string>
    <string name="parameters">Parâmetros</string>
    <string name="manutencao_fluido">Manutenção Fluído</string>
    <string name="estanqueidade">Estanqueidade</string>
    <string name="txt_pressure">Pressão</string>
    <string name="txt_time">Tempo</string>
    <string name="txt_advanced">Avançado</string>
    <string name="txt_pattern">Padrão</string>
    <string name="txt_placa_core">Placa Core</string>
    <string name="txt_placa_sm">Placa SM</string>
    <string name="txt_start">Iniciar</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_save">Salvar</string>
    <string name="txt_repeat">Repetir</string>
    <string name="txt_continue">Continuar</string>
    <string name="txt_med_bar">bar</string>
    <string name="txt_med_seconds">S</string>
    <string name="title_point_test_pumps">Pontos Teste</string>
    <string name="information_es_test_zme">Informações Test ZME</string>
    <string name="unauthorized_server">O dispositivo deve se autenticar para obter a resposta solicitada.</string>
    <string name="internal_server_error">O servidor encontrou uma situação com a qual não sabe lidar.</string>
    <string name="title_activity_synchronization_database">synchronization_database</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="synchronization_database">Sincronização banco de dados</string>
    <string name="time_consuming_task">Esta tarefa pode demorar um pouco dependendo do modelo de seu aparelho e conexão com a internet, mas é um processo obrigatório.</string>
    <string name="error_sync_download">Houve um erro na sincronização, tente novamente mais tarde.</string>
    <string name="register_new_license">Registrando licença aplicativo.</string>
    <string name="error_sync_server_trying_other">Tentativa de se conectar com o servidor errada. Tentando se conectar com outro.</string>
    <string name="error_sync_server">Não foi possível se conectar com o servidor.</string>
    <string name="max_xid_brand">Max xid marca</string>
    <string name="not_values_brand_max_xid">Nenhum valor encontrado para marcas.</string>
    <string name="max_xid_version">Max xid versão</string>
    <string name="not_values_version_max_xid">Nenhum valor encontrado max xid para versão</string>
    <string name="max_xid_revision">Max xid revision</string>
    <string name="max_xid_translate_type_point_test_injector">Max xid tradução do tipo de ponto do injetor</string>
    <string name="max_xid_translate_type_plan_test_injector">Max xid tradução do tipo de plano de teste injetor</string>
    <string name="max_xid_injector">Max xid Injector</string>
    <string name="not_values_translate_type_plan_test_injector_max_xid">Nenhum valor encontrado max xid para tipo de testes de planos injetores.</string>
    <string name="not_values_revision_max_xid">Nenhum valor max xid encontrado para revisão</string>
    <string name="not_values_injector_max_xid">Nenhum valor max xid encontrado para injetor.</string>
    <string name="not_values_translate_type_point_test_injector_max_xid">Nenhum valor max xid encontrado para tipo ponto teste de injetor.</string>
    <string name="max_xid_revision_injector">Max xid Revisão Injetor</string>
    <string name="not_values_revision_injector_max_xid">Nenhum valor max xid encontrado para revisão de injetor</string>
    <string name="max_xid_platform">Max xid plataforma</string>
    <string name="not_values_platform_max_xid">Nenhum valor max xid encontrado para plataforma.</string>
    <string name="not_values_injector_platform_max_xid">Nenhum valor max xid encontrado para plataforma de injetor.</string>
    <string name="max_xid_injector_platform">Max xid plataforma de injetor.</string>
    <string name="max_xid_injector_plant_test">Max xid plano de teste de injetor.</string>
    <string name="not_values_injector_plan_test_max_xid">Nenhum valor max xid encontrado.</string>
    <string name="max_xid_injector_platform_plan_test">Max xid injetor plataforma plano teste.</string>
    <string name="not_values_injector_platform_plan_test_max_xid">Nenhum valor max xid encontrado para injetor plataforma plano de teste.</string>
    <string name="max_xid_point_test_injector">Max xid ponto de teste injetor.</string>
    <string name="not_values_point_test_injector_max_xid">Nenhum valor max xid encontrado para ponto teste de injetor.</string>
    <string name="max_xid_type_plan_test">Max xid tipo de plano test</string>
    <string name="not_values_type_plan_test_max_xid">Nenhum valor max xid encontrado para plano teste de injetor.</string>
    <string name="brand">Marca</string>
    <string name="not_values_brand">Nenhum valor encontrado para marca.</string>
    <string name="version">Versão</string>
    <string name="not_values_version">Nenhum valor encontrado para versão.</string>
    <string name="revision">Revisão</string>
    <string name="not_values_revision">Não foi encontrado nenhum valor para revisão.</string>
    <string name="not_values_translate_type_plan_test_injector">Nenhum valor encontrado para tradução do tipo de plano teste.</string>
    <string name="translate_type_plan_test_injector">Tradução tipo plano teste injetor</string>
    <string name="translate_type_point_test_injector">Tradução tipo ponto teste injetor.</string>
    <string name="not_values_translate_type_point_test_injector">Nenhum valor encontrado para tradução do tipo de ponto de injetor.</string>
    <string name="translate_type_plan_test">Tipo de plano teste.</string>
    <string name="not_values_type_plan_test">Nenhum valor encontrado para tipo de plano teste.</string>
    <string name="injector">Injetor</string>
    <string name="not_values_injector">Nenhum valor encontrado para injetor.</string>
    <string name="txt_test_tightness_injector">Teste Estanqueidade</string>
    <string name="txt_point_test_injector">Ponto de teste injetor</string>
    <string name="txt_point_test_pump">Ponto de teste bomba</string>
    <string name="txt_rotation_test_pump">Rotação bomba</string>
</resources>