<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cinza_claro_tecnomotor"
    android:orientation="horizontal">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart_estanqueidade"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/cinza_medio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="0dp">
    </com.github.mikephil.charting.charts.LineChart>

    <TextView
        android:id="@+id/txt_est_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/txt_pressure"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEstPressure"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txt_est_pressure"
        app:layout_constraintTop_toTopOf="@+id/txt_est_pressure"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_est_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_med_bar"
        android:textColor="@color/pantone_red_186"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editTextEstPressure"
        app:layout_constraintTop_toTopOf="@+id/editTextEstPressure" />

    <TextView
        android:id="@+id/txt_est_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/txt_time"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_est_pressure"
        app:layout_constraintTop_toBottomOf="@+id/txt_est_pressure" />

    <EditText
        android:id="@+id/editTextEstTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editTextEstPressure"
        app:layout_constraintTop_toTopOf="@+id/txt_est_time"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txt_est_segunds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_med_seconds"
        android:textColor="@color/pantone_red_186"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editTextEstTime"
        app:layout_constraintTop_toTopOf="@+id/editTextEstTime" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="80dp"
        android:background="@color/cinza_medio"
        app:layout_constraintTop_toBottomOf="@+id/txt_est_time"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-85dp" />

    <Button
        android:id="@+id/btn_est_start"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txt_start"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_est_bar"
        app:layout_constraintTop_toTopOf="@+id/editTextEstPressure" />

    <Button
        android:id="@+id/btn_est_cancel"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/txt_cancel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_est_start"
        app:layout_constraintTop_toTopOf="@+id/editTextEstTime" />

</androidx.constraintlayout.widget.ConstraintLayout>