<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro_tecnomotor"
    tools:context=".view.synchronization.SynchronizationDatabase">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_view_title_synchronization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/synchronization_database"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/slogan"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_information"
                android:background="@color/black"
                tools:ignore="MissingConstraints"
                android:contentDescription="TODO" />

            <ProgressBar
                android:id="@+id/progress_bar_synchronization"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:progressDrawable="@drawable/progressbar1" />

            <TextView
                android:id="@+id/txt_message_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_start_synchronization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:textAllCaps="false"
                android:text="@string/txt_start"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_view_time_consuming_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/time_consuming_task"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>